# gui-text-editor

./: CMakeLists.txt  README.md
res/shaders/: 01.metal  quad.metal  squircle.metal
src/macos/: AppDelegate.h  AppDelegate.m  LinearAlg.h  LinearAlg.m  MetalProfiler.h  MetalProfiler.m  MetalRenderer.h  MetalRenderer.m  MetalView.h  MetalView.m  UI.h  UI.m  Vertex.h  main.m  main.mm
